ops/Components/Core/Ev2/ARM/Proto.CoreCtlStamp.Template.json
{
  "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "env": {
      "type": "string"
    },
    "clusterServicePrincipalAppId": {
      "type": "string"
    },
    "clusterServicePrincipalSecret": {
      "type": "string"
    },
    "clusterVersion": {
      "type": "string"
    },
    "clusterNodeCount": {
      "type": "object"
    },
    "instance": {
      "type": "string"
    },
    "resourceNamePrefix": {
      "type": "string",
      "defaultValue": "vssvc-"
    },
    "serviceName": {
      "type": "string"
    },
    "stampName": {
      "type": "string"
    }
  },
  "variables": {
    "location": "[resourceGroup().location]",
    "env": "[parameters('env')]",
    "clusterServicePrincipalAppId": "[parameters('clusterServicePrincipalAppId')]",
    "clusterServicePrincipalSecret": "[parameters('clusterServicePrincipalSecret')]",
    "instance": "[parameters('instance')]",
    "resourceNamePrefix": "[parameters('resourceNamePrefix')]",
    "serviceName": "[parameters('serviceName')]",
    "stampName": "[parameters('stampName')]",
    "baseResourceName": "[concat(variables('resourceNamePrefix'),'-',variables('serviceName'),'-',variables('env'),'-',variables('instance'),'-',variables('stampName'))]",
    "clusterName": "[concat(variables('baseResourceName'),'-cluster')]",
    "clusterKubernetesVersion": "[parameters('clusterVersion')]",
    "clusterNodeCount": "[parameters('clusterNodeCount')]",
    "nsgName": "[concat(variables('baseResourceName'),'-nsg')]",
    "nsgId": "[resourceId('Microsoft.Network/networkSecurityGroups',variables('nsgName'))]",
    "vnetName": "[concat(variables('baseResourceName'),'-vnet')]",
    "vnetId": "[resourceId('Microsoft.Network/virtualNetworks',variables('vnetName'))]",
    "vnetSubnetNameDefault": "default",
    "vnetSubnetIdDefault": "[resourceId('Microsoft.Network/virtualNetworks/subnets/',variables('vnetName'),variables('vnetSubnetNameDefault'))]",
    "vnetSubnetNameVirtualNodeAci": "virtual-node-aci",
    "storageAccountName": "[concat(replace(variables('baseResourceName'),'-',''),'sa')]",
    "storageAccountAccessTier": "Hot",
    "storageAccountKind": "StorageV2",
    "storageAccountTier": "Standard",
    "storageAccountType": "Standard_LRS",
    "databaseAccountName": "[concat(variables('baseResourceName'),'-db')]",
    "databaseAccountKind": "GlobalDocumentDB",
    "databaseAccountDefaultConsistencyLevel": "Session",
    "databaseAccountDefaultExperience": "Core (SQL)",
    "databaseAccountEnableAutomaticFailover": false,
    "databaseAccountEnableMultipleWriteLocations": false,
    "databaseAccountFailoverPriority": 0,
    "databaseAccountIsVirtualNetworkFilterEnabled": false,
    "databaseAccountOfferType": "Standard"
  },
  "resources": [
    {
      "comments": "** Stamp Cluster Network Security Group **",
      "apiVersion": "2019-07-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('nsgName')]",
      "location": "[variables('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Http",
            "properties": {
              "access": "Allow",
              "description": "Allow HTTP",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "80",
              "direction": "Inbound",
              "priority": 500,
              "protocol": "Tcp",
              "sourceAddressPrefix": "Internet",
              "sourcePortRange": "*"
            }
          },
          {
            "name": "Https",
            "properties": {
              "access": "Allow",
              "description": "Allow HTTPS",
              "destinationAddressPrefix": "*",
              "destinationPortRange": "443",
              "direction": "Inbound",
              "priority": 501,
              "protocol": "Tcp",
              "sourceAddressPrefix": "Internet",
              "sourcePortRange": "*"
            }
          }
        ]
      }
    },
    {
      "comments": "** Stamp Cluster Virtual Network **",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('vnetName')]",
      "apiVersion": "2018-10-01",
      "location": "[variables('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "10.0.0.0/8"
          ]
        },
        "subnets": [
          {
            "name": "[variables('vnetSubnetNameDefault')]",
            "properties": {
              "addressPrefix": "10.240.0.0/16",
              "networkSecurityGroup": {
                "id": "[variables('nsgId')]"
              }
            }
          },
          {
            "name": "[variables('vnetSubnetNameVirtualNodeAci')]",
            "properties": {
              "addressPrefix": "10.241.0.0/16",
              "delegations": [
                {
                  "name": "aciDelegation",
                  "properties": {
                    "serviceName": "Microsoft.ContainerInstance/containerGroups",
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ]
                  }
                }
              ],
              "networkSecurityGroup": {
                "id": "[variables('nsgId')]"
              }
            }
          }
        ]
      },
      "dependsOn": [
        "[variables('nsgId')]"
      ]
    },
    {
      "comments": "** Stamp K8s Cluster **",
      "type": "Microsoft.ContainerService/managedClusters",
      "name": "[variables('clusterName')]",
      "apiVersion": "2018-03-31",
      "location": "[variables('location')]",
      "properties": {
        "kubernetesVersion": "[variables('clusterKubernetesVersion')]",
        "dnsPrefix": "[variables('clusterName')]",
        "agentPoolProfiles": [
          {
            "name": "agentpool",
            "count": "[variables('clusterNodeCount')[variables('stampName')]]",
            "vmSize": "Standard_DS2_v2",
            "osDiskSizeGB": 30,
            "storageProfile": "ManagedDisks",
            "vnetSubnetID": "[variables('vnetSubnetIdDefault')]",
            "maxPods": 30,
            "osType": "Linux"
          }
        ],
        "servicePrincipalProfile": {
          "clientId": "[variables('clusterServicePrincipalAppId')]",
          "secret": "[variables('clusterServicePrincipalSecret')]"
        },
        "addonProfiles": {
          "aciConnectorLinux": {
            "enabled": true,
            "config": {
              "SubnetName": "[variables('vnetSubnetNameVirtualNodeAci')]"
            }
          },
          "httpApplicationRouting": {
            "enabled": false
          }
        },
        "enableRBAC": true,
        "networkProfile": {
          "networkPlugin": "azure",
          "serviceCidr": "10.0.0.0/16",
          "dnsServiceIP": "10.0.0.10",
          "dockerBridgeCidr": "172.17.0.1/16"
        }
      },
      "dependsOn": [
        "[variables('vnetId')]"
      ]
    },
    {
      "comments": "***** Stamp Storage Account *****",
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('storageAccountName')]",
      "apiVersion": "2019-04-01",
      "kind": "[variables('storageAccountKind')]",
      "location": "[variables('location')]",
      "sku": {
        "name": "[variables('storageAccountType')]",
        "tier": "[variables('storageAccountTier')]"
      },
      "properties": {
        "accessTier": "[variables('storageAccountAccessTier')]"
      }
    },
    {
      "comments": "***** Stamp CosmosDB Database Account *****",
      "type": "Microsoft.DocumentDB/databaseAccounts",
      "name": "[variables('databaseAccountName')]",
      "apiVersion": "2015-04-08",
      "location": "[variables('location')]",
      "kind": "[variables('databaseAccountKind')]",
      "properties": {
        "name": "[variables('databaseAccountName')]",
        "enableAutomaticFailover": "[variables('databaseAccountEnableAutomaticFailover')]",
        "enableMultipleWriteLocations": "[variables('databaseAccountEnableMultipleWriteLocations')]",
        "isVirtualNetworkFilterEnabled": "[variables('databaseAccountIsVirtualNetworkFilterEnabled')]",
        "virtualNetworkRules": [],
        "consistencyPolicy": {
          "defaultConsistencyLevel": "[variables('databaseAccountDefaultConsistencyLevel')]"
        },
        "locations": [
          {
            "locationName": "[variables('location')]",
            "failoverPriority": "[variables('databaseAccountFailoverPriority')]"
          }
        ],
        "databaseAccountOfferType": "[variables('databaseAccountOfferType')]"
      },
      "tags": {
        "defaultExperience": "[variables('databaseAccountDefaultExperience')]"
      },
      "dependsOn": [
        "[variables('vnetId')]"
      ]
    }
  ]
}
